@@ -67,6 +67,9 @@ public:
 	// Run-time special non-persistent options.
 	bool bDontUseNativeDialogs;
 
+	// Custom widget style theme.
+	QString sCustomStyleTheme;
+
 	// Singleton instance accessor.
 	static drumkv1_config *getInstance();
 
